--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 lockfile==0.12.2
 MarkupSafe==1.1.1
+psycopg2-binary==2.8.6
 python-daemon==2.2.4
 requests==2.22.0
+SQLAlchemy==1.3.22
 urllib3==1.25.11
 Werkzeug==1.0.1
